--- a/artbyt-web/public/admin/index.html
+++ b/artbyt-web/public/admin/index.html
@@ -179,7 +179,7 @@
         }
       });
 
-      // Homepage Preview - matches live intro section exactly
+      // Homepage Preview - matches live homepage with all sections
       const HomepagePreview = createClass({
         render: function() {
           const entry = this.props.entry;
@@ -189,26 +189,54 @@
           const description = intro?.get('description') || '';
           const primaryButton = intro?.get('primaryButton');
           const secondaryButton = intro?.get('secondaryButton');
+          const featuredAssignment = entry.getIn(['data', 'featuredAssignment']) || '';
+          const moreStories = entry.getIn(['data', 'moreStories']) || [];
 
-          return h('div', { className: 'relative isolate px-6 lg:px-8' },
-            h('div', { className: 'mx-auto max-w-4xl py-16 sm:py-24 lg:py-32' },
-              h('div', { className: 'text-center' },
-                // Main heading
-                h('h1', { className: 'text-5xl font-bold tracking-tight text-gray-900 sm:text-7xl lg:text-8xl' }, subtitle),
-                // Subheading
-                h('p', { className: 'mt-2 text-2xl font-semibold text-gray-900 sm:text-3xl' }, title),
-                // Description
-                description && h('p', { className: 'mt-8 text-xl leading-relaxed text-gray-600 max-w-2xl mx-auto' }, description),
-                // Buttons
-                h('div', { className: 'mt-12 flex flex-col sm:flex-row items-center justify-center gap-4' },
-                  primaryButton && h('div', { className: 'w-full sm:w-auto rounded-md bg-gray-900 px-8 py-3.5 text-base font-semibold text-white shadow-sm hover:bg-gray-800 transition-colors cursor-pointer' },
-                    primaryButton.get('text') || 'Primary Button'
-                  ),
-                  secondaryButton && h('div', { className: 'w-full sm:w-auto rounded-md border border-gray-900 px-8 py-3.5 text-base font-semibold text-gray-900 hover:bg-gray-50 transition-colors cursor-pointer' },
-                    secondaryButton.get('text') || 'Secondary Button'
+          return h('div', {},
+            // Intro Section
+            h('div', { className: 'relative isolate px-6 lg:px-8' },
+              h('div', { className: 'mx-auto max-w-4xl py-16 sm:py-24 lg:py-32' },
+                h('div', { className: 'text-center' },
+                  h('h1', { className: 'text-5xl font-bold tracking-tight text-gray-900 sm:text-7xl lg:text-8xl' }, subtitle),
+                  h('p', { className: 'mt-2 text-2xl font-semibold text-gray-900 sm:text-3xl' }, title),
+                  description && h('p', { className: 'mt-8 text-xl leading-relaxed text-gray-600 max-w-2xl mx-auto' }, description),
+                  h('div', { className: 'mt-12 flex flex-col sm:flex-row items-center justify-center gap-4' },
+                    primaryButton && h('div', { className: 'w-full sm:w-auto rounded-md bg-gray-900 px-8 py-3.5 text-base font-semibold text-white shadow-sm hover:bg-gray-800 transition-colors cursor-pointer' },
+                      primaryButton.get('text') || 'Primary Button'
+                    ),
+                    secondaryButton && h('div', { className: 'w-full sm:w-auto rounded-md border border-gray-900 px-8 py-3.5 text-base font-semibold text-gray-900 hover:bg-gray-50 transition-colors cursor-pointer' },
+                      secondaryButton.get('text') || 'Secondary Button'
+                    )
                   )
                 )
               )
+            ),
+            // Featured Assignment Section
+            featuredAssignment && h('div', { className: 'max-w-4xl mx-auto px-6 mb-24 md:mb-32' },
+              h('div', { className: 'mb-8' },
+                h('h2', { className: 'text-3xl md:text-4xl font-bold tracking-tight mb-2' }, 'Utvalt projekt'),
+                h('p', { className: 'text-lg text-gray-600' }, 'Ett urval av mitt senaste arbete')
+              ),
+              h('div', { className: 'text-gray-600 italic text-center py-8' }, 
+                `Visar: ${featuredAssignment}`
+              )
+            ),
+            // More Assignments Section
+            moreStories.size > 0 && h('div', { className: 'max-w-4xl mx-auto px-6 mb-24 md:mb-32' },
+              h('h2', { className: 'text-3xl md:text-4xl font-bold tracking-tight mb-12 text-center' }, 'Fler projekt'),
+              h('div', { className: 'text-gray-600 italic text-center py-8' }, 
+                `Visar ${moreStories.size} projekt: ${moreStories.join(', ')}`
+              )
+            ),
+            // Testimonials placeholder
+            h('div', { className: 'max-w-4xl mx-auto px-6 mb-24 md:mb-32' },
+              h('h2', { className: 'text-3xl md:text-4xl font-bold tracking-tight mb-12 text-center' }, 'Kundrecensioner'),
+              h('p', { className: 'text-gray-600 text-center' }, 'Recensioner från nöjda kunder')
+            ),
+            // Portfolio Gallery placeholder
+            h('div', { className: 'max-w-4xl mx-auto px-6 mb-24 md:mb-32' },
+              h('h2', { className: 'text-3xl md:text-4xl font-bold tracking-tight mb-12 text-center' }, 'Portfolio'),
+              h('p', { className: 'text-gray-600 text-center' }, 'Ett urval av mina bästa arbeten')
             )
           );
         }
