--- a/artbyt-web/public/admin/index.html
+++ b/artbyt-web/public/admin/index.html
@@ -217,15 +217,33 @@
                 h('h2', { className: 'text-3xl md:text-4xl font-bold tracking-tight mb-2' }, 'Utvalt projekt'),
                 h('p', { className: 'text-lg text-gray-600' }, 'Ett urval av mitt senaste arbete')
               ),
-              h('div', { className: 'text-gray-600 italic text-center py-8' }, 
-                `Visar: ${featuredAssignment}`
+              h('div', { className: 'bg-white rounded-lg shadow-md overflow-hidden hover:shadow-lg transition-shadow' },
+                h('div', { className: 'aspect-[16/9] bg-gray-200 flex items-center justify-center' },
+                  h('p', { className: 'text-gray-500 text-sm' }, 'Bild för projekt')
+                ),
+                h('div', { className: 'p-6' },
+                  h('h3', { className: 'text-2xl font-bold mb-3' }, featuredAssignment),
+                  h('p', { className: 'text-gray-600 mb-4' }, 'Projektbeskrivning visas här när sidan publiceras'),
+                  h('div', { className: 'inline-block text-gray-900 font-semibold hover:underline' }, 'Läs mer →')
+                )
               )
             ),
             // More Assignments Section
             moreStories.size > 0 && h('div', { className: 'max-w-4xl mx-auto px-6 mb-24 md:mb-32' },
               h('h2', { className: 'text-3xl md:text-4xl font-bold tracking-tight mb-12 text-center' }, 'Fler projekt'),
-              h('div', { className: 'text-gray-600 italic text-center py-8' }, 
-                `Visar ${moreStories.size} projekt: ${moreStories.join(', ')}`
+              h('div', { className: 'grid grid-cols-1 md:grid-cols-2 gap-8' },
+                moreStories.map(function(slug) {
+                  return h('div', { className: 'bg-white rounded-lg shadow-md overflow-hidden hover:shadow-lg transition-shadow', key: slug },
+                    h('div', { className: 'aspect-[16/9] bg-gray-200 flex items-center justify-center' },
+                      h('p', { className: 'text-gray-500 text-sm' }, 'Bild')
+                    ),
+                    h('div', { className: 'p-6' },
+                      h('h3', { className: 'text-xl font-bold mb-2' }, slug),
+                      h('p', { className: 'text-gray-600 text-sm' }, 'Projektbeskrivning'),
+                      h('div', { className: 'mt-3 inline-block text-gray-900 font-semibold text-sm hover:underline' }, 'Läs mer →')
+                    )
+                  );
+                }).toArray()
               )
             ),
             // Testimonials placeholder
